--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>webrtc</title>
-    <script type="text/javascript" src="js/utils.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="./js/utils.js"></script>
+    <script type="text/javascript" src="./js/index.js"></script>
     <style>
         .main{ float:left;width:33%;border:1px solid #000000}
         .log{ float:left;width:33%;border:1px solid #000000}
@@ -14,11 +14,30 @@
 <body>
 <div class="main" >
     <label for="showUserId">用户ID: </label><span id = "showUserId"></span>
+
+    <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
+    <form action="/pub/login" method="post" target="dummyframe">
+        <label>User Name</label>
+        <br>
+        <label>
+            <input type="text" name="username" required>
+        </label>
+        <br>
+        <label>
+            <input type="text" name="password" required>
+        </label>
+        <input type="submit" value="Submit" >
+    </form>
+
+    <button onclick="whoami()"> who am i </button>
+    <button onclick="logout()"> logout </button>
+    <button onclick="connect()"> WebSocket connect </button>
     <h2>房间列表</h2>
     <div>
         <label for="roomId">房间号: </label><input id = "roomId"/>
         <button id="enterRoom">创建房间</button>
     </div>
+
     <div id="roomList"><!-- 根据后台返回数据，动态添加--></div>
 
     <h2>消息列表</h2>
