--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>webrtc</title>
     <script type="text/javascript" src="./js/utils.js"></script>
-    <script type="text/javascript" src="./js/index.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
     <style>
         .main{ float:left;width:33%;border:1px solid #000000}
         .log{ float:left;width:33%;border:1px solid #000000}
@@ -16,7 +16,7 @@
     <label for="showUserId">用户ID: </label><span id = "showUserId"></span>
 
     <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
-    <form action="/pub/login" method="post" target="dummyframe">
+    <form action="/api/pub/login" method="post" id="login" target="dummyframe">
         <label>User Name</label>
         <br>
         <label>
@@ -26,17 +26,16 @@
         <label>
             <input type="text" name="password" required>
         </label>
-        <input type="submit" value="Submit" >
+        <input type="submit" value="Submit" onclick="mySubmit()">
     </form>
 
     <button onclick="whoami()"> who am i </button>
     <button onclick="logout()"> logout </button>
     <button onclick="connect()"> WebSocket connect </button>
-    <h2>房间列表</h2>
-    <div>
-        <label for="roomId">房间号: </label><input id = "roomId"/>
-        <button id="enterRoom">创建房间</button>
-    </div>
+    <button onclick="call()"> call </button>
+    <button onclick="updateUsers()"> updateUsers </button>
+    <h2>用戶列表</h2>
+    <div id="userList"></div>
 
     <div id="roomList"><!-- 根据后台返回数据，动态添加--></div>
 
